[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://sprites/rocket_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/life_bar_brown.png" type="Texture" id=3]
[ext_resource path="res://sprites/life_bar_red.png" type="Texture" id=4]
[ext_resource path="res://sprites/circle.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 15.7915
height = 27.171

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 16.0629
height = 27.0177

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 169.73

[sub_resource type="Gradient" id=8]

offsets = PoolRealArray( 0, 0.792, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.695312, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=9]

flags = 4
gradient = SubResource( 8 )
width = 2048
_sections_unfolded = [ "gradient" ]

[sub_resource type="Curve" id=5]

min_value = 0.0
max_value = 1.5
bake_resolution = 100
_data = [ Vector2( 0, 1.5 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.4208 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]

flags = 4
width = 2048
curve = SubResource( 5 )
_sections_unfolded = [ "curve" ]

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 10, 5, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.3
scale_random = 0.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 9 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Emission Shape", "Flags", "Gravity", "Initial Velocity", "Radial Accel", "Scale", "Spread", "Trail", "color_ramp", "scale_curve" ]

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
motion/sync_to_physics = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.272903, 0 )
scale = Vector2( 0.454191, 0.454191 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )
_sections_unfolded = [ "shape" ]

[node name="bullet_pos" type="Position2D" parent="."]
editor/display_folded = true
position = Vector2( 0, -25 )

[node name="condencer" type="Node" parent="bullet_pos"]

[node name="bullet_timer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="player_damage_area" type="Area2D" parent="."]
editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_damage_area"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="player_area" type="Area2D" parent="."]
editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_area"]
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="player_life" type="TextureProgress" parent="CanvasLayer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 160.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 0.1
page = 0.0
value = 100.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
texture_under = ExtResource( 3 )
texture_over = null
texture_progress = ExtResource( 4 )
tint_under = Color( 1, 1, 1, 1 )
tint_over = Color( 1, 1, 1, 1 )
tint_progress = Color( 1, 1, 1, 1 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Rect", "Textures" ]

[node name="smoke" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 33.25 )
emitting = false
amount = 50
lifetime = 0.7
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 7 )
texture = ExtResource( 5 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Visibility", "Z Index" ]

[node name="player_camera" type="Camera2D" parent="."]
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 100.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Offset", "Smoothing" ]

[connection signal="tree_exiting" from="." to="." method="_on_player_tree_exiting"]
[connection signal="area_entered" from="player_damage_area" to="." method="_on_player_damage_area_area_entered"]
[connection signal="value_changed" from="CanvasLayer/player_life" to="." method="_on_player_life_value_changed"]
